--- a/src/main/resources/vidmot/slanga_pro/end-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/end-view.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="fxAnchor" prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.EndController" stylesheets="@../../css/classic.css">
+<AnchorPane fx:id="fxAnchor" prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/classic.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.EndController">
    <children>
-      <Button layoutX="224.0" layoutY="601.0" mnemonicParsing="false" onAction="#onAftur" text="Spila aftur" />
-      <Label fx:id="fxWinnerImg" layoutX="0.0" layoutY="0.0" prefWidth="100" prefHeight="100" styleClass="player1" visible="false"/>
-      <Label fx:id="fxWinner" layoutX="154.0" layoutY="137.0" text="" />
+      <Button layoutX="200.0" layoutY="660.0" mnemonicParsing="false" onAction="#onAftur" text="Spila aftur" />
+      <Label fx:id="fxWinner" layoutX="150.0" layoutY="40.0" prefHeight="17.0" text="" />
+      <ImageView fitHeight="557.0" fitWidth="456.0" layoutX="64.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../css/images/snakewin.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
